--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <a href="profile.html">profile</a>
+
+    <div style="margin: auto;text-align: center;">
+        <h2>Image from my friend</h2>
+        <img src="https://i.pinimg.com/originals/c0/b2/c6/c0b2c69d69ffec5fee2c0897122a7439.gif" style="width: 250px;">
+    </div>
 </body>
 </html>
